package aka.hanan.hananakawiapp;

import androidx.appcompat.app.AppCompatActivity;

import android.os.Bundle;

public class learn extends AppCompatActivity {

    @Override
    protected void onCreate(Bundle savedInstanceState) {
        super.onCreate(savedInstanceState);
        setContentView(R.layout.activity_cliant);
    }
}