package aka.hanan.hananakawiapp;

import androidx.appcompat.app.AppCompatActivity;

import android.os.Bundle;

public class learninggame extends AppCompatActivity {

    @Override
    protected void onCreate(Bundle savedInstanceState) {
        super.onCreate(savedInstanceState);
        setContentView(R.layout.activity_learninggame);
    }
}